Refactoring + dwnld btn + last updated

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <h2>Software Engineer</h2>
     </div>
   </header>
+  <div class="download-link-wrapper">
+    <a class="btn download-link" href="docs/Pavel Martynenka - cv.pdf" download>Download PDF</a>
+    <p class="last-updated">Last Updated: Dec 2024</p>
+  </div>
   <main class="content-wrapper">
     <section class="resume-section">
       <div class="contacts">
